k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld-app
  ports:
    - name: http
      port: 80
      targetPort: http
