k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  labels:
    app.kubernetes.io/name: helloworld-ingress
spec:
  rules:
  - host: helloworld.hostilemeow.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helloworld-service
            port: 
              number: 80
